# ovqrcodeapp

./: Cargo.toml  index.html
assets/: sw.js
src/: lib.rs  main.rs  ovapp.rs
